--- a/filename.html
+++ b/filename.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>git branches</title>
   </head>
-  <p>making changes</p>
+  <p>I don't know what I am doing</p>
   <body></body>
 </html>
